Replaced ervaring CV with description.

--- a/index.html
+++ b/index.html
@@ -233,179 +233,13 @@
 
 						<!-- Ervaring -->
 						<article id="ervaring">
-							<ul class="actions">
-								<li><a href="#Opleiding" class="button">Opleiding</a></li>
-								<li><a href="#Ervaring" class="button">Ervaring</a></li>
-								<li><a href="#Vaardigheden" class="button">Vaardigheden</a></li>
-							</ul>
-							<h2 id="Opleiding" class="minor"><i class="fa fa-certificate fa-fw"></i>Opleiding</h2>
+							<h2 id="Ervaring" class="minor"><i class="fa fa-certificate fa-fw"></i>Ervaring</h2>
 
-							<h5 class="float-right margin-right"> <i class="fa fa-calendar fa-fw "></i>2024</h5> 
-							<h4 class=""><b>Opleiding Basis Acceptance Commitment Therapie (ACT)</b></h4>
-							<h4 class="lower-case">Corporate training</h4>
-							<br>
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>2022 - 2023</h5> 
-							<h4 class=""><b>Opleiding schematherapie; basis en gevorderde</b></h4>
-							<h4 class="lower-case">King Nascholing</h4>
-							<br>
-							<h5 class="float-right margin-right"> <i class="fa fa-calendar fa-fw "></i>2022</h5> 
-							<h4 class=""><b>Gevorderde EMDR Therapie</b></h4>
-							<h4 class="lower-case">King Nascholing</h4>
-							<br>
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>2017 - 2019</h5> 
-							<h4 class=""><b>Opleiding tot GZ psycholoog</b></h4>
-							<h4 class="lower-case">Radboud universiteit - Nijmegen</h4>
-							<br>
-							<h5 class="float-right margin-right"> <i class="fa fa-calendar fa-fw"></i>2021</h5> 
-							<h4 class=""><b>Opleiding Dialectische gedragstherapie</b></h4>
-							<h4 class="lower-case">Dialexis - Nijmegen</h4>
-							<br>
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw"></i>2018 - 2019</h5> 
-							<h4 class=""><b>EMDR Therapie</b></h4>
-							<h4 class="lower-case">Radboud Universiteit - Nijmegen</h4>
-							<br>
-							<h5 class="float-right margin-right"> <i class="fa fa-calendar fa-fw"></i>2017</h5> 
-							<h4 class=""><b>Opleiding basis cognitieve gedragstherapie (CGT)</b></h4>
-							<h4 class="lower-case">Radboud Universiteit - Nijmegen</h4>
-							<br>
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw"></i>1996 - 2018</h5> 
-							<h4 class=""><b>Orthopedagogiek, psychosociale problemen bij kinderen en jeugd</b></h4>
-							<h4 class="lower-case">Universiteit, pedagogische wetenschappen - Utrecht</h4>
-							<br>
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>1995 - 1996</h5> 
-							<h4 class=""><b>Propedeuse: Sociaal Pedagogische Hulpverlening</b></h4>
-							<h4 class="lower-case">HBO - 's-Gravenhave</h4>
-							<br>
-							<h2 id="Ervaring" class="minor"><i class="fa fa-suitcase fa-fw"></i>Ervaring</h2>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>01/2024 - Heden</h5> 
-							<h3 class=""><b>GZ Psycholoog, Therapeut</b></h3>
-							<h4 class=""><b>Pro Persona</b> - Ede - Freelance</h4>
-							<h4 class=""><b>Pro Persona afdeling Connect Volwassenen (ZZP)</b></h4>
-							<p>Polikliniek volwassenen met de werkzaamheden, regiebehandelaar,
-								behandeling met name schematherapie, intensieve traumabehandeling,
-								en geprotocolleerde behandelingen.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>11/2022 - Heden</h5> 
-							<h3 class=""><b>GZ psycholoog, Therapeut, Diagnosticus</b></h3>
-							<h4 class=""><b>Dokter Leokannerhuis</b>  - Arnhem - Contract voor onbepaalde tijd</h4>
-							<h4 class=""><b>Dokter Leo Kannerhuis afdeling Volwassen te Arnhem</b></h4>
-							<p>Polikliniek volwassenen en DAC (Diagnostiek Advies en Consultatieafdeling) met de werkzaamheden regiebehandelaar, diagnostiek (bij met
-								name second opinion patiënten), behandeling met name schematherapie
-								en EMDR bij cliënten met autisme en co morbiditeit. Ook geef ik
-								werkbegeleiding aan psychogen in opleiding tot GZ psycholoog.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>01/2021 - 11/2023</h5> 
-							<h3 class=""><b>GZ psycholoog</b></h3>
-							<h4 class=""><b>Pro Persona</b>  - Arnhem - Freelance</h4>
-							<h4 class=""><b>Pro Persona afdeling Kind en jeugd (4-20 jaar) (ZZP)</b></h4>
-							<p>Werkzaam als regiebehandelaar binnen een multi disciplinair team. Het
-								verrichten van spoed intakes, diagnostiek en behandeling van cliënten
-								tussen de 10 en 21 jaar. Tevens is bij deze opdracht gevraagd een
-								coachende rol in te nemen vanuit verbinding, ter verbetering van de
-								dynamiek.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>09/2021 - 10/2022</h5> 
-							<h3 class=""><b>GZ psycholoog, Therapeut</b></h3>
-							<h4 class=""><b>Dokter Leokannerhuis</b> - Oosterbeek - Contract voor onbepaalde tijd</h4>
-							<h4 class=""><b>Dokter Leo Kannerhuis, open klinische afdeling (13-23 jaar)</b></h4>
-							<p>Na sluiting van de CIBA ben ik werkzaam geweest op de open kliniek als
-								behandel coördinator, therapeut en diagnosticus.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>01/2019 - 11/2021</h5> 
-							<h3 class=""><b>GZ psycholoog</b></h3>
-							<h4 class=""><b>Kairos, Pompenstichting</b> - 's-Hertogenbosch, Nijmegen - Freelance</h4>
-							<h4 class=""><b>Kairos van de Pompenstichting, poliklinisch. (ZZP)</b></h4>
-							<p>Werkzaam als regiebehandelaar binnen een multi discplinair team. Het
-								verrichten van intakes, diagnostiek en behandeling bij cliënten die
-								delicten gepleegd hadden waarbij zij binnen verplicht kader behandeling
-								moesten volgen vanuit rechtbank met aansturing door de reclassering.
-								Maar ook cliënten die vrijwillig behandeling volgden omdat ze dreigden
-								het verkeerde pad op te gaan.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>04/2019 - 10/2021</h5> 
-							<h3 class=""><b>GZ psycholoog, Behandelcoördinator, Therapeut</b></h3>
-							<h4 class=""><b>Dokter Leokannerhuis, afdeling CIBA</b> - Oosterbeek - Contract voor onbepaalde tijd</h4>
-							<h4 class=""><b>Dokter Leo Kannerhuis, afdeling CIBA (16-23 jaar)</b></h4>
-							<p>Na afronding van de GZ opleiding, ben ik werkzaam gebleven op de CIBA
-								(zie hieronder voor uitgebreide omschrijving) als behandelcoördinator, therapeut en diagnosticus. Bovendien ben ik onderdeel van het CIBA
-								ambulante team. Binnen dit team heb ik als taak cliënten in crisis,
-								ambulant te behandelen, om opname te voorkomen. Ook treed ik op als
-								interne en externe consultant bij casussen waar de client met autisme in
-								crisis verkeert. Binnen de CIBA ben ik onderdeel van het
-								managementteam en begeleid ik psychologen in opleiding.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>01/2017 - 04/2019</h5> 
-							<h3 class=""><b>Orthopedagoog i.o. tot GZ Psycholoog</b></h3>
-							<h4 class=""><b>Dokter Leokannerhuis</b> - Oosterbeek en Arnhem - Contract voor onbepaalde tijd</h4>
-							<h4 class=""><b>Dokter Leo Kannerhuis, afdeling CIBA (16-23 jaar)</b></h4>
-							<p><em>Omschrijving orthopedagoog in opleiding tot GZ psycholoog:</em> Tijdens de
-								GZ opleiding werkzaam geweest op verschillende afdelingen binnen het
-								dokter Leo Kannerhuis:<br>
-								· Polikliniek volwassenen en DAC (Diagnostiek Advies en Consultatieafdeling) met de werkzaamheden diagnostiek (bij met name second
-								opinion patiënten), geprotocolleerd behandelen van cliënten met
-								angst-/dwangstoornis, cognitieve gedragstherapie geven en
-								relatietherapie geven aan stellen, waarvan één van beide partners
-								autisme heeft.<br>
-								· CIBA (13-23 jaar) (Crisis Interventie Behandeling Autisme). Intensieve en
-								gespecialiseerde behandeling op een klinische gesloten en besloten
-								afdeling van complexe cliënten met autisme en co-mobiliteit. Werkzaam
-								geweest als behandel coördinator en therapeut (EMDR, CGT).</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>06/2010 - 01/2017</h5> 
-							<h3 class=""><b>Behandelcoördinator</b></h3>
-							<h4 class=""><b>Dokter Leokannerhuis</b> - Nijmegen - Contract voor onbepaalde tijd</h4>
-							<h4 class=""><b>Dokter Leo Kannerhuis afdeling deeltijd behandeling (13-23 jaar)</b></h4>
-							<p><em>Omschrijving van de functie behandelcoördinator:</em> Het voeren van intake
-								gesprekken bij nieuwe cliënten, het coördineren van het behandelproces,
-								het inhoudelijk coachen binnen een multidisciplinair team. Daarnaast de
-								verantwoordelijkheid dragen en het gezamenlijk creëren van beleid en
-								werkprocessen op meerdere behandelgroepen.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>04/2008 - 05/2010</h5> 
-							<h3 class=""><b>Behandelcoördinator / diagnosticus</b></h3>
-							<h4 class=""><b>Mutsaersstichting</b> - Wessem - Contract voor onbepaalde tijd</h4>
-							<h4 class=""><b>Kinder- en Jeugdpsychiatrie, poli klinisch (4-18 jaar).</b></h4>
-							<p><em>Omschrijving van de functie behandelcoördinator:</em> <br>Het voeren van intakegesprekken bij nieuwe cliënten. De regie over de
-								behandeling voeren en het begeleiden van cliënt en het systeem in dit
-								proces. Het opstellen van behandelplannen en het indiceren van
-								verschillende modules. Het bewaken van de methodische uitvoering,
-								rapportages en dossiervoering en de evaluatie van de behandeling<br>
-								<em>Omschrijving van de functie diagnosticus:</em> <br>Onderzoeken en observeren van cliënten, onder gebruikmaking van
-								diverse onderzoeks- en observatiemethodieken. Rapporteren van
-								onderzoeksresultaten ten behoeve van de behandelaars. Op verzoek
-								deelnemen aan evaluatiebesprekingen.</p>
-
-							<h5 class="float-right"> <i class="fa fa-calendar fa-fw "></i>04/2003 - 03/2008</h5> 
-							<h3 class=""><b>Sociotherapeut A</b></h3>
-							<h4 class=""><b>Mutsaersstichting</b> - Venlo - Contract voor onbepaalde tijd</h4>
-							<h4 class=""><b>Kinder- en Jeugdpsychiatrie, klinische afdeling (6-15 jaar). </b></h4>
-							<p>Het begeleiden van dagelijkse activiteiten en
-								interventies bij kinderen tussen de zes en vijftien jaar. Vormgeven enstructuren van een veilig leef– en behandelklimaat. Het omgaan met
-								conflictsituaties. Het observeren, rapporteren en diagnosticeren van
-								gedrag. Het stellen van hypotheses. Het toepassen en uitvoeren van
-								interventies. Het voeren van gesprekken, adviseren van cliënt en ouders
-								en betrekken van ouders bij de behandeling.</p>
-
-							<h2 id="Vaardigheden" class="minor"><i class="fa fa-asterisk fa-fw"></i>Vaardigheden</h2>
-							<ul class="">
-								<li>Betrokken</li>
-								<li>Sociaal Intelligent</li>
-								<li>Betrouwbaarheidsgevoel</li>
-								<li>Stressbestendig</li>
-								<li>Doorzettingsvermogen</li>
-								<li>Luisteren</li>
-								<li>Snelle Waarneming</li>
-								<li>Teamwerk</li>
-								<li>Probleemoplossend Vermogen</li>
-								<li>Communicatie Vaardigheden</li>
-								<li>Emphatisch</li>
-								<li>Sterk Verantwoordelijkheidsgevoel</li>
-								<li>Enthousiasme</li>
-								<li>Besluitvaardig</li>
-								<li>Bereidheid Om Te Ontwikkelen</li>
-							</ul>
-	
+							<p>Ik ben GZ-psycholoog, therapeut en diagnosticus met ruim 20 jaar ervaring binnen de specialistische GGZ. In mijn loopbaan heb ik gewerkt binnen de jeugd- en volwassenenzorg, de forensische GGZ en zowel open als gesloten klinische afdelingen, waar sprake was van complexe, vaak crisissituaties.</p>
+							<p>Tot april 2025 was ik werkzaam bij het Dr. Leo Kannerhuis. Momenteel werk ik binnen de volwassen polikliniek van Pro Persona en daarnaast als ZZP’er bij Het Alternatief Jeugdzorg Driestroom, waar ik werkzaam ben als schematherapeut. In mijn behandelingen maak ik gebruik van verschillende evidence-based methodieken, waaronder schematherapie, EMDR en cognitieve gedragstherapie (CGT).</p>
+							<p>Ik heb ruime ervaring als regiebehandelaar en in het behandelen van ernstige en complexe problematiek, waaronder trauma, persoonlijkheidsproblematiek, ontwikkelingsstoornissen en comorbiditeit. Mijn ervaring binnen gesloten klinische settings heeft mij geleerd te werken onder hoge druk, met oog voor veiligheid, structuur en het opbouwen van een werkzame behandelrelatie, ook wanneer vertrouwen niet vanzelfsprekend is.</p>
+							<p>Daarnaast heb ik gewerkt binnen de forensische zorg, waar behandeling plaatsvond binnen een verplicht kader, en binnen de kind- en jeugdpsychiatrie, waarbij systeemgericht werken en samenwerking met ouders en ketenpartners essentieel waren.</p>
+							<p>Mijn werkwijze kenmerkt zich door een zorgvuldige, betrokken en transparante benadering. Ik werk vanuit samenwerking, sluit aan bij wat iemand nodig heeft en richt mij op duurzame verandering en herstel.</p>
 						</article>
 
 						<!-- Registraties -->
